k8s/node-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-gateway-service
  namespace: devsecops-platform
  labels:
    app: node-gateway-service
    tier: frontend
    app.kubernetes.io/part-of: devsecops-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-gateway-service
  template:
    metadata:
      labels:
        app: node-gateway-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "3000"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: node-gateway-service
          image: reddygangalakunta/node-devsecops-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health/live
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 2
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: devsecops-platform
  labels:
    app: node-gateway-service
spec:
  type: ClusterIP
  selector:
    app: node-gateway-service
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
