k8s/python-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-analytics-service
  namespace: devsecops-platform
  labels:
    app: python-analytics-service
    tier: backend
    app.kubernetes.io/part-of: devsecops-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-analytics-service
  template:
    metadata:
      labels:
        app: python-analytics-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: python-analytics-service
          image: reddygangalakunta/python-threat-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 2
---
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: devsecops-platform
  labels:
    app: python-analytics-service
spec:
  type: ClusterIP
  selector:
    app: python-analytics-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
